<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_huella_volumen_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/volumen"
        android:layout_width="wrap_content"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:text="0">

        <requestFocus />

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_huella_alto_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/alto"
        android:layout_width="wrap_content"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:text="0">


    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_huella_largo_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/largo"
        android:layout_width="wrap_content"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:text="0">


    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_huella_ancho_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ancho"
        android:layout_width="wrap_content"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:text="0">


    </EditText>

</LinearLayout>