<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/panelBotones"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalle_producto_clave_lbl"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/clave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalle_producto_descripcion_lbl"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:paddingBottom="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalle_producto_ubicacion_lbl"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalle_producto_area_lbl"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                />

        </LinearLayout>



    </LinearLayout>

        <LinearLayout
            android:id="@+id/panelBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:gravity="right">

            <EditText
                android:id="@+id/codigoUbicacionEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/leer_codigo_ubicacion_lbl"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/aceptarBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/leer_codigo_enviar_lbl"
                android:background="@drawable/shape_button_aceptar"
                android:layout_below="@+id/codigoET"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:onClick="aceptar"/>

        </LinearLayout>



</RelativeLayout>
