<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" tools:context=".MainActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:background="#0670BD"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="preferencias"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:paddingLeft="20dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/configuracion"
                    android:layout_marginRight="5dp"
                    android:onClick="preferencias"/>

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:text="@string/menu_surtido"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/surtido"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="surtido"
                android:layout_margin="5dp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:text="@string/menu_recibo"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/recibo"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="recibo"
                android:layout_margin="5dp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:text="@string/menu_reubicacion"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/reubicacion"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="reubicacion"
                android:layout_margin="5dp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:text="@string/menu_almacenaje"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/almacenaje"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="almacenaje"
                android:layout_margin="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:text="@string/menu_estado"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/cambio_estado"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="cambioEstado"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:text="@string/menu_existencia"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/existencia"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="existencia"
                android:layout_margin="5dp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:text="@string/menu_conteo"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/conteo"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="conteo"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:text="@string/menu_ajuste_inventario"
                android:textColor="#FFFFFF"
                android:drawableTop="@drawable/ajuste_inventario"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/shape_button_menu"
                android:textSize="12sp"
                android:onClick="ajusteInventario"
                android:layout_margin="5dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
