<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
  tools:context=".MainActivity"
    android:background="#FFFFFF"
    android:id="@+id/main_page_layout">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:background="#0670BD"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selling"/>

            <EditText
                android:id="@+id/usuarioET"
                android:hint="@string/usuario_lbl" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textNoSuggestions"/>

            <EditText
                android:id="@+id/contraseniaET"
                android:hint="@string/contrasenia_lbl" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkUsuario"
                android:background="@drawable/shape_button"
                android:textColor="#FFFFFF"
                android:text="@string/siguente_lbl"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
